Fix overflow & sticky navbar on mobile

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,7 +14,7 @@
 
 html {
   font-size: 62.5%;
-
+  overflow-x: clip;
   @include responsive(big-desk) {
     font-size: 75%; //1rem = 12px
   }
@@ -39,7 +39,7 @@ body {
   color: $color-secondary;
   background-color: $color-primary;
   box-sizing: border-box;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 .loading {
@@ -86,6 +86,7 @@ body {
   z-index: 10;
   transition: all 300ms ease-in;
   animation: navbarAppear 300ms ease-in;
+  overflow-x: clip;
 
   &--active {
     background-color: rgba(255, 255, 255, 0.98);
@@ -357,6 +358,11 @@ body {
     clip-path: polygon(0 7%, 100% 0%, 100% 93%, 0 100%);
   }
 
+  @include responsive(phone) {
+    clip-path: polygon(0 4%, 100% 0%, 100% 96%, 0 100%);
+    padding-top: 23vh;
+  }
+
   &__box {
     max-width: 1500px;
     display: flex;
@@ -617,6 +623,10 @@ body {
       right: 30%;
     }
   }
+
+  @include responsive(phone) {
+    padding: 10vh 0;
+  }
 }
 
 .about {
@@ -624,6 +634,10 @@ body {
   padding: 20vh 10vw;
   background: rgb(218, 232, 232);
   clip-path: polygon(0 16%, 100% 0%, 100% 84%, 0 100%);
+
+  @include responsive(tab-port) {
+    clip-path: polygon(0 6%, 100% 0%, 100% 94%, 0 100%);
+  }
 
   &__box {
     max-width: 800px;
